-fixed overlapping of notification button and searchbar -made the dashboard smaller and more -added the content and articles

--- a/style.css
+++ b/style.css
@@ -4,14 +4,18 @@
     display: grid;
     grid-template-columns: minmax(250px,0.6fr) repeat(3,minmax(300px,1fr));
     grid-template-rows: 1fr 4.5fr;
-    gap: 20px;
     height: 100dvh;
     
 }
-.container *:not(.sidebar *,.sidebar,.header *,.header) {
-    font-family: 'Roboto',sans-serif;
-    border: 1px solid black;
+
+button {
+  background: none;   
+  border: none;         
+  padding: 0;         
+  margin: 0;      
+  cursor: pointer; 
 }
+
 .container * {
     font-family: 'Roboto',sans-serif;
 }
@@ -20,6 +24,7 @@
 /* Search bar, profile picture and buttons */
 .header {
     margin-top: 1rem;
+    margin-bottom: 2rem;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-column: 2 / -1;
@@ -115,7 +120,6 @@
     grid-column: 1;
     grid-row: 1 / 3;
     background-color: #228dd4;
-    box-shadow: 0px 5px 6px black;
 }
 .sidebar img {
     filter: brightness(0) invert(1);
@@ -148,14 +152,43 @@
 /* articles news and trendings */
 .content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-column: 2 / -1;
     grid-row: 2;
     gap: 20px;
+    background-color: #E9EDF0;
+    padding: 2rem;
+    padding-bottom: 7rem;
+    padding-top: 7rem;
 }
 .article{
     grid-column: 1;
     grid-row: 1 / -1;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+    gap: 3rem;
+}
+article{
+    font-size: 1.3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    border-radius: 24px;
+    padding: 1.3rem;
+    border-left: 1rem solid orange;
+}
+article p {
+    color: gray;
+}
+.article-buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 2rem;
+    padding-right: 1rem;
+    margin-top: auto;
+    margin-bottom: 10%;
 }
 /* articles news and trendings */
+
